Cleaned up UI stylings for production server - gradient now displayed evenly over entire window

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -216,26 +216,21 @@
 
   {% block body %}{% endblock %}
   <hr>
-  
   <div class="container center">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <footer>
       <div class="footer" id="footer">
-          <div class="container">
-            <div class="row">
-                <div class="" align="center">
-                      <a href="#"> <i class=" fa fa-facebook">   </i> </a>
-                      <a href="#"> <i class="fa fa-twitter">   </i> </a>
-                      <a href="#"> <i class="fa fa-google-plus">   </i> </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div align="center"><p>Copyright © 2015 DVJudge</p></div>
-                </div>
-            </div>
+        <div class="container">
+          <div class="row col-xs-12" align="center">
+            <a href="#"><i class=" fa fa-facebook">   </i> </a>
+            <a href="#"><i class="fa fa-twitter">   </i> </a>
+            <a href="#"><i class="fa fa-google-plus">   </i> </a>
+          </div>
+          <div class="row col-xs-12" align="center">
+            <p>Copyright © 2015 DVJudge</p>
           </div>
         </div>
+      </div>
     </footer>
   </link>
 </div>
