--- a/dvjudge/static/style.css
+++ b/dvjudge/static/style.css
@@ -2,6 +2,18 @@ body {
 	background: linear-gradient(to bottom, #FFFFFF, rgba(117, 141, 164, 0.2));
 }
 
+html, body {
+   margin:0;
+   padding:0;
+   min-height:100%;
+}
+
+footer {
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+}
+
 /*
 body            { font-family: sans-serif; background: #eee; }
 a, h1, h2       { color: #377ba8; }
